<resources>
    <string name="app_name">MySelf-AKB</string>
    <string name="title_home">Home</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_walkthrough">WalkthroughActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_daily">Daily</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_music_video">Music</string>

    <string name="nim">10119197</string>
    <string name="age">23</string>
    <string name="jurusan_kelas">Teknik Informatika - 5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">Selamat Datang!</string>
    <string name="title_interest">Interest</string>
    <string name="full_name">Mochamad Nurkhayal Kadafi</string>
    <string name="title_aboutme">About Me</string>
    <string name="aboutme">Mahasiswa Teknik Informatika \nAsal Kabupaten Cianjur \nmemilki minat dalam pengembangan aplikasi mobile dan hobi bermain sepatu roda.</string>
    <string name="title_contactme">Contact Me</string>
    <string name="about">About</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_findme">Find Me</string>
    <string name="latitude">-6.889105</string>
    <string name="longitude">107.621710</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibW5rYWRhZmkiLCJhIjoiY2wzYmNreTNpMDZhajNpbzI1OXIxdGc0OSJ9.Z5utRR5YyOlXMCjdRqnRtw</string>
</resources>